<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.DeatilFragment">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_person_24"
                app:civ_border_color="@color/black"
                app:civ_border_width="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.547"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/person_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="clear_text"
                android:layout_marginTop="10dp"
                app:hintTextColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/person_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/person_name"
                    android:inputType="textPersonName|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_Number_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/person_name"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">
                <!--        app:layout_constraintTop_toBottomOf="@id/passwordLayout"-->


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/company_name_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/purple_700"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/phone_Number_Layout"
                app:startIconDrawable="@drawable/office">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/company_name_Layout"
                app:startIconDrawable="@drawable/ic_baseline_email_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="clear_text"
                android:layout_marginTop="10dp"
                app:hintTextColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:startIconDrawable="@drawable/ic_baseline_cake_24"
                app:layout_constraintTop_toBottomOf="@+id/email_Layout"
                tools:layout_editor_absoluteY="414dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birth_Layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>